Fixed URL used to open HTML preview.